adding more homepage images

--- a/src/_includes/crown/silver-gold.html
+++ b/src/_includes/crown/silver-gold.html
@@ -1,4 +1,4 @@
-<div class="column column--full-width text--centered">
+<div class="column item column--full-width text--centered" id="see-the-difference">
   <ul class="tabs">
 		<li class="tab-link current" data-tab="tab-1">SILVER</li>
 		<li class="tab-link" data-tab="tab-2">GOLD</li>
@@ -45,7 +45,7 @@ jQuery(document).ready(function($){
 		$(this).addClass('current');
 		$("#"+tab_id).addClass('current');
 	});
-  
+
   // Image slide.
     var dragging = false,
         scrolling = false,
