--- a/src/_includes/section-with-carousel.html
+++ b/src/_includes/section-with-carousel.html
@@ -1,8 +1,10 @@
 {% assign node = include.param %}
 <div class="section section--with-carousel {{ node.variantClasses }} {{ node.layout }}" id="{{node.id}}" style="background-image:url({{ node.bgImage }}); background-position: {{ node.bgImagePosition }}; background-size: {{ node.bgImageSize }};">
-  <div class="content-wrapper">
+  <div class="content-wrapper--carousel vertically-centered">
     <h1 class="title {{ node.title_variantClasses }}">{{ node.title }}</h1>
-    <div class="carousel" style="background-image:url({{ node.image }});"></div>
+    <div class="carousel">
+      <div class="carousel__slide" style="background-image:url({{ node.image }});"></div>
+    </div>
     <div class="text">{{ node.body | markdownify }}</div>
     <a href="{{ site.url }}{{ node.buttonLink }}" class="btn {{ node.buttonClasses }}">{{ node.buttonText }}</a>
   </div>
