Company adding images

--- a/src/_includes/company/clients.html
+++ b/src/_includes/company/clients.html
@@ -1,1 +1,3 @@
-clients.html
+<div class="carousel" id="company-carouse;">
+  <div class="carousel__slide" style="background-image:url('/images/homepage/Global-leader-Crown-Corks.png');"></div>
+</div>
