--- a/src/_includes/company/global-reach-map.html
+++ b/src/_includes/company/global-reach-map.html
@@ -1,1 +1,3 @@
-global-reach-map.html
+<div class="image-slice" id="company-global-reach">
+  <div class="image"><img class="img-fluid" src="/images/company/5.jpg"></div>
+</div>
