--- a/src/_includes/company/our-history-image-slice.html
+++ b/src/_includes/company/our-history-image-slice.html
@@ -1,1 +1,3 @@
-our-history-image-slice.html
+<div class="image-slice" id="company-history">
+  <div class="image"><img class="img-fluid" src="/images/company/2.jpg"></div>
+</div>
