--- a/src/_includes/company/our-team-image-slice.html
+++ b/src/_includes/company/our-team-image-slice.html
@@ -1,1 +1,3 @@
-our-team-image-slice.html
+<div class="image-slice image-slice--contained" id="company-team">
+  <div class="image"><img class="img-fluid" src="/images/company/4.jpg"></div>
+</div>
