Adding company images

--- a/src/_includes/company/our-team-image-slice.html
+++ b/src/_includes/company/our-team-image-slice.html
@@ -1,3 +1,3 @@
-<div class="image-slice image-slice--contained" id="company-team">
-  <div class="image"><img class="img-fluid" src="/images/company/4.jpg"></div>
+<div class="image-slice" id="company-team">
+  <div class="image image-slice--contained"><img class="img-fluid" src="/images/company/4.jpg"></div>
 </div>
