--- a/src/assets/scss/components/slice/_slice.scss
+++ b/src/assets/scss/components/slice/_slice.scss
@@ -1,6 +1,7 @@
 .slice {
   padding-top: 150px;
-  padding-bottom: 150px;  
+  padding-bottom: 150px;
+  background-repeat: no-repeat;
 
   h2 {
     @extend .title--small;
