--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -29,6 +29,7 @@
 @import "components/video/video";
 @import "components/section/section";
 @import "components/slice/slice";
+@import "components/image-slice/image-slice";
 
 @import "components/form/floating-label";
 @import "components/form/forms";
