--- a/src/_includes/company/clients.html
+++ b/src/_includes/company/clients.html
@@ -1,3 +1,3 @@
-<div class="carousel" id="company-carouse;">
+<div class="carousel" id="company-carousel">
   <div class="carousel__slide" style="background-image:url('/images/homepage/Global-leader-Crown-Corks.png');"></div>
 </div>
