--- a/src/_includes/slice.html
+++ b/src/_includes/slice.html
@@ -1,5 +1,5 @@
 {% assign node = include.param %}
-<div class="slice {{ node.variantClasses }} {{ node.layout }} clearfix" id="{{node.id}}"{% if node.id == 'history' %} style="background-image:url({{ node.bgImage }}); background-position: {{ node.bgImagePosition }}; background-size: {{ node.bgImageSize }};"{% endif %}>
+<div class="slice {{ node.variantClasses }} {{ node.layout }} js-waypoint-text clearfix" id="{{node.id}}"{% if node.id == 'history' %} style="background-image:url({{ node.bgImage }}); background-position: {{ node.bgImagePosition }}; background-size: {{ node.bgImageSize }};"{% endif %}>
   <div class="content-container">
     <div class="column">
       <h2 class="subtitle">{{ node.subtitle }}</h2>
