adding images and videos

--- a/src/_includes/crown/silver-gold.html
+++ b/src/_includes/crown/silver-gold.html
@@ -1,7 +1,7 @@
 <div class="column item column--full-width text--centered" id="see-the-difference">
   <ul class="tabs">
-		<li class="tab-link current" data-tab="tab-1">SILVER</li>
-		<li class="tab-link" data-tab="tab-2">GOLD</li>
+		<li class="tab-link tab-link--left current" data-tab="tab-1">SILVER</li>
+		<li class="tab-link tab-link--right" data-tab="tab-2">GOLD</li>
 	</ul>
   <!-- https://codyhouse.co/demo/image-comparison-slider/index.html -->
   <div id="tab-1" class="tab-content current">
