--- a/src/assets/scss/components/slice/_slice.scss
+++ b/src/assets/scss/components/slice/_slice.scss
@@ -3,6 +3,12 @@
   padding-bottom: 150px;
   background-repeat: no-repeat;
 
+  &--with-centered-image {
+    .image {
+      text-align: center;
+    }
+  }
+
   h2 {
     @extend .title--small;
   }
