--- a/src/_includes/section.html
+++ b/src/_includes/section.html
@@ -1,5 +1,5 @@
 {% assign node = include.param %}
-<div class="section {{ node.variantClasses }} {{ node.layout }} clearfix" id="{{node.id}}" {% if(node.bgImage) %}style="background-image:url({{ node.bgImage }}); background-position: {{ node.bgImagePosition }}; background-size: {{ node.bgImageSize }};"{% endif %}>
+<div class="section {{ node.variantClasses }} {{ node.layout }} clearfix" id="{{node.id}}" {% unless node.id == "exterior-side" %}{% if(node.bgImage) %}style="background-image:url({{ node.bgImage }}); background-position: {{ node.bgImagePosition }}; background-size: {{ node.bgImageSize }};"{% endif %}{% endunless %}>
   <div class="column">
     {% if node.image %}
       <div class="js-waypoint-image">
