--- a/src/assets/scss/base/_misc.scss
+++ b/src/assets/scss/base/_misc.scss
@@ -87,9 +87,23 @@ body {
   }
 }
 
+.grey-background {
+  background-color: #f2f2f2;
+}
+
 // Home page logistics
 #logistics {
   background-color: #f2f2f2;
+}
+
+// Anatomy
+#crown-corks {
+  background-color: #f2f2f2;
+}
+
+// Exterior side
+#exterior-side-wrapper {
+  background-repeat: no-repeat;
 }
 
 // Why crwon corks
