--- a/src/assets/scss/base/_see-the-difference.scss
+++ b/src/assets/scss/base/_see-the-difference.scss
@@ -1,3 +1,6 @@
+$button-dark: #4d4d4d;
+$button-light: #b3b3b3;
+
 // Tabs
 ul.tabs{
 	margin: 0px;
@@ -6,21 +9,31 @@ ul.tabs{
 }
 
 ul.tabs li{
-	background: none;
-	color: #222;
+	background: #b3b3b3;
+	color: white;
 	display: inline-block;
-	padding: 10px 15px;
+	padding: 7px 30px 5px 30px;
 	cursor: pointer;
+	font-size: 16px;
+}
+
+.tab-link {
+	&--left {
+		border-radius: 5px 0 0 5px;
+	}
+	&--right {
+		border-radius: 0 5px 5px 0;
+	}
 }
 
 ul.tabs li.current{
-	background: #ededed;
-	color: #222;
+	background: $button-dark;
+	color: white;
 }
 
 .tab-content{
 	display: none;
-	background: #ededed;
+	background: none;
 	padding: 15px;
 }
 
