--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -24,14 +24,20 @@
 
     <!-- JavaScript External -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.16.0/jquery.validate.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="//use.fontawesome.com/eb7ab6760b.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
-    <!-- JavaScript Internal NEW-->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
+
+
+
     <script async defer src="{{site.url}}/assets/javascript/contact-validation.js"></script>
     <script async defer src="{{site.url}}/assets/javascript/menu.js"></script>
     <script async defer src="{{site.url}}/assets/javascript/animate.js"></script>
     <script async defer src="{{site.url}}/assets/javascript/floating-label.js"></script>
 
+  <!-- JavaScript Internal NEW  
+    <script async defer src="{{site.url}}/assets/javascript/scripts.min.js"></script>
+
+-->
   </body>
 </html>
