adding canvas animations

--- a/src/_layouts/company/company.html
+++ b/src/_layouts/company/company.html
@@ -1,7 +1,14 @@
 ---
 layout: default
 ---
-<script src="{{site.url}}/assets/javascript/noframework.waypoints.min.js"></script>
+<!--
+<script src="http://code.createjs.com/easeljs-0.7.0.min.js"></script>
+<script src="http://code.createjs.com/tweenjs-0.5.0.min.js"></script>
+<script src="http://code.createjs.com/movieclip-0.7.0.min.js"></script>
+-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/EaselJS/0.8.0/easeljs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tweenjs/0.6.2/tweenjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/EaselJS/0.8.0/movieclip.min.js"></script>
 
 {% assign langcode = page.lang %}
 {% for companyItems in site.data.company[langcode] %}
