--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -29,13 +29,13 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
 
 
-
+    <script async defer src="{{site.url}}/assets/javascript/canvas.js"></script>
     <script async defer src="{{site.url}}/assets/javascript/contact-validation.js"></script>
     <script async defer src="{{site.url}}/assets/javascript/menu.js"></script>
     <script async defer src="{{site.url}}/assets/javascript/animate.js"></script>
     <script async defer src="{{site.url}}/assets/javascript/floating-label.js"></script>
 
-  <!-- JavaScript Internal NEW  
+  <!-- JavaScript Internal NEW
     <script async defer src="{{site.url}}/assets/javascript/scripts.min.js"></script>
 
 -->
