--- a/src/_includes/company/global-reach-map.html
+++ b/src/_includes/company/global-reach-map.html
@@ -1,3 +1,34 @@
+<script src="{{site.url}}{{site.canvasLocation}}/company/map/map.js"></script>
+
+
+<script type="text/javascript">
+  var canvas, stage, exportRoot;
+
+  // resize the canvas to fill browser window dynamically
+  // window.addEventListener('resize', globalMapInit, false);
+
+  function globalMapInit() {
+  	canvas = document.getElementById("global-map");
+    var w = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
+    canvas.width  = w;
+    canvas.height = w * 0.635; //aspect ratio 1397*888
+  	globalMapDraw(canvas);
+  }
+
+  function globalMapDraw(e) {
+    var canvas = e;
+    exportRoot = new lib.map();
+
+  	stage = new createjs.Stage(canvas);
+  	stage.addChild(exportRoot);
+  	stage.update();
+
+  	createjs.Ticker.setFPS(lib.properties.fps);
+  	createjs.Ticker.addEventListener("tick", stage);
+  }
+</script>
+<canvas id="global-map" class="canvas-animation" style="background-color:#FFFFFF"></canvas>
+
 <div class="image-slice" id="company-global-reach">
   <div class="image"><img class="img-fluid" src="/images/company/5.jpg"></div>
 </div>
