--- a/src/assets/scss/base/_misc.scss
+++ b/src/assets/scss/base/_misc.scss
@@ -128,3 +128,11 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+//Canvas
+.canvas-animation {
+//  width: 100%;
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
