--- a/src/_layouts/crown-corks/crown-corks.html
+++ b/src/_layouts/crown-corks/crown-corks.html
@@ -1,6 +1,12 @@
 ---
 layout: default
 ---
+<script src="https://cdnjs.cloudflare.com/ajax/libs/EaselJS/0.8.0/easeljs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tweenjs/0.6.2/tweenjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/EaselJS/0.8.0/movieclip.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/PreloadJS/0.6.0/preloadjs.min.js"></script>
+
+
 {% assign langcode = page.lang %}
 {% for crownItems in site.data.crown[langcode] %}
   {% assign crownItem = crownItems[1] %}
