--- a/src/_includes/crown/lithographic.html
+++ b/src/_includes/crown/lithographic.html
@@ -31,7 +31,7 @@
 		loader.addEventListener("fileload", handleFileLoad);
 		loader.addEventListener("complete", handleComplete);
 
-		loader.loadManifest(libColdActivated.properties.manifest);
+		loader.loadManifest(libLithographic.properties.manifest);
 	}
 
 	function handleFileLoad(evt) {
