--- a/src/assets/scss/components/menu/_menu.scss
+++ b/src/assets/scss/components/menu/_menu.scss
@@ -20,15 +20,15 @@
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: rgb(14,55,33);
-    background-color: rgba(14,55,33, 0.9);
+    background-color: rgb(225,27,34);
+    background-color: rgba(225,27,34, 0.9);
     overflow-x: hidden;
     transition: 0.5s;
 }
 
 .overlay-content {
     position: relative;
-    top: 25%;
+    top: 15%;
     width: 100%;
     text-align: center;
     margin-top: 30px;
@@ -37,8 +37,8 @@
 .overlay a {
     padding: 8px;
     text-decoration: none;
-    font-size: 36px;
-    color: #818181;
+    font-size: 43px;
+    color: $white;
     display: block;
     transition: 0.3s;
 }
